# sentiment_api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  models.py  services.py
tests/: conftest.py  test_services.py
