[project]
name = "sentiment-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "sqlmodel>=0.0.24",
    "torch[cpu]>=2.7.1",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
]
